# zshdb

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.md  README  README.md  THANKS  acinclude.m4  autogen.sh  circle.yml  configure.ac  dbg-fns.inc  dbg-gdb.inc  dbg-init.inc  dbg-main.inc  dbg-main.sh  dbg-opts.sh  dbg-pre.sh  dbg-processor.inc  dbg-set-d-vars.inc  dbg-sig.inc  dbg-stack.inc  dbg-trace.sh.in  getopt-test.sh  getopts_long.sh  init.inc  main.inc  make-check-filter.rb  opts.inc  pre.inc  testing.sh  zshdb  zshdb-trace.in  zshdb.in  zshtrace.sh  zterm-background.sh
.circleci/: config.yml
admin/: how-to-make-a-release.md
command/: .gitignore  Makefile.am  action.sh  alias.cmd  alias.sh  backtrace.cmd  backtrace.sh  break.sh  complete.sh  condition.sh  continue.cmd  continue.sh  debug.sh  delete.sh  disable.sh  display.sh  down.cmd  down.sh  edit.sh  enable.sh  eval.cmd  eval.sh  examine.sh  export.sh  frame.cmd  frame.sh  handle.sh  help.cmd  help.sh  info.sh  kill.sh  list.sh  load.sh  next.sh  print.cmd  pwd.sh  quit.cmd  quit.sh  return.sh  run.cmd  (+19 more)
command/info_sub/: Makefile.am  args.sh  breakpoints.sh  brkpts.sh  display.sh  files.sh  functions.sh  line.sh  program.sh  signals.sh  source.sh  stack.sh  variables.sh  warranty.sh
command/set_sub/: .gitignore  Makefile.am  annotate.sh  args.sh  autoeval.sh  autolist.sh  basename.sh  confirm.sh  debug.sh  debugging.sh  different.sh  editing.sh  filename-display.sh  highlight.sh  history.sh  linetrace.sh  linewidth.sh  listsize.sh  prompt.sh  showcommand.sh  style.sh  trace-commands.sh  width.sh
command/show_sub/: Makefile.am  alias.sh  annotate.sh  autoeval.sh  autolist.sh  basename.sh  commands.sh  confirm.sh  copying.sh  debug.sh  debugging.sh  different.sh  editing.sh  filename-display.sh  highlight.sh  history.sh  linetrace.sh  listsize.sh  prompt.sh  style.sh  warranty.sh  width.sh
data/: .gitignore  Makefile.am  shell.sh
doc/: .gitignore  Makefile.am  toRsT.py  zshdb-man.pod
docs/: Makefile  commands.rst  conf.py  entry-exit.rst  features.rst  index.rst  install.md  install.rst  manpage.rst  overview.rst  syntax.rst
docs/commands/: breakpoints.rst  data.rst  info.rst  running.rst  set.rst  show.rst  stack.rst  support.rst
docs/commands/breakpoints/: break.rst  condition.rst  delete.rst  disable.rst  enable.rst  tbreak.rst
docs/commands/data/: display.rst  eval.rst  examine.rst  load.rst  pr.rst  undisplay.rst
docs/commands/files/: edit.rst  list.rst
docs/commands/info/: break.rst  breakpoints.rst  display.rst  files.rst  functions.rst  line.rst  program.rst  source.rst  stack.rst  variables.rst
docs/commands/running/: continue.rst  debug.rst  exit.rst  kill.rst  next.rst  quit.rst  restart.rst  run.rst  skip.rst  step.rst
docs/commands/set/: annotate.rst  args.rst  autoeval.rst  autolist.rst  basename.rst  cmdtrace.rst  confirm.rst  debug.rst  different.rst  editing.rst  events.rst  filename-display.rst  flush.rst  highlight.rst  linetrace.rst  listsize.rst  maxstring.rst  skip.rst  style.rst  (+4 more)
docs/syntax/: command.rst  suffixes.rst
emacs/: .gitignore  Makefile.am  zshdb-test.el.in  zshdb.el
lib/: .gitignore  Makefile.am  action.sh  alias.inc  alias.sh  break.sh  columnize.sh  columns.sh  complete.sh  dbg-call.sh  display.sh  file.sh  filecache.sh  fns.inc  fns.sh  frame.sh  gdb.inc  gdb.sh  help.inc  help.sh  hist.sh  hook.sh  info-help.sh  info.sh  journal.inc  journal.sh  list.sh  msg.sh  processor.inc  processor.sh  rstext.py  run.inc  run.sh  save-restore.sh  set-d-vars.inc  set-d-vars.sh  setshow.sh  shell.sh  sig.inc  sig.sh  (+8 more)
test/: .gitignore  Makefile.am  README.md
test/data/: .gitignore  Makefile.am  action.cmd  action.right  brkpt1.cmd  brkpt1.right  bug-args.cmd  bug-args.right  bug-delete.cmd  bug-delete.right  bug-errexit.cmd  bug-errexit.right  bug-ksharrays.cmd  bug-ksharrays.right  bug-step-subshell.cmd  bug-step-subshell.right  bugIFS.cmd  bugIFS.right  bugIFS2.cmd  bugIFS2.right  condition.cmd  condition.right  debug.cmd  debug.right  debug2.cmd  delete.cmd  delete.right  display.cmd  display.right  enable.cmd  enable.right  examine-5.4.1.right  examine.cmd  examine.right  export-5.4.1.right  export.cmd  export.right  file with spaces.cmd  file with spaces.right  frame-5.8.1.right  (+33 more)
test/example/: .gitignore  Makefile.am  bug-args.sh  bug-args.sh.in  bug-delete.sh  bug-errexit.sh  bug-ksharrays.sh  bug-step-subshell.sh  bugIFS.sh  bugIFS2.sh  dbg-test1.sh  dbg-test1.sub  dbg-test2.sh  debug.sh  exam.sh  file with spaces.sh  gcd.sh  hanoi.sh.in  multi.sh  nexting.sh  restart.sh  restart.sh.in  settrace.sh  skip.sh.in  stepping.sh  subshell.sh
test/example/dir with spaces/: bug.sh
test/integration/: .gitignore  Makefile.am  README.md  check-common.sh.in  lopts.tests  setshow.tests  sopts.tests  test-bug-args  test-bug-args.in  test-bug-delete  test-bug-delete.in  test-bug-errexit  test-bug-errexit.in  test-bug-ksharrays  test-bug-step-subshell.in  test-bugIFS  test-bugIFS2.in  test-debug.in  test-enable  test-enable.in  test-examine  test-examine.in  test-export.in  test-file-with-spaces  test-file-with-spaces.in  test-frame  test-frame.in  test-list  test-list.in  test-multi  test-multi.in  test-next.in  test-opts  test-opts.in  test-restart  test-restart.in  test-setshow  test-setshow.in  test-skip  test-skip.in  (+4 more)
test/unit/: .gitignore  Makefile.am  helper.sh  shunit2  test-action.sh.in  test-alias.sh  test-alias.sh.in  test-break.sh.in  test-cmd-complete.sh.in  test-cmd-info-variables.sh.in  test-columns.sh.in  test-dbg-opts.sh.in  test-eval.sh.in  test-examine.sh.in  test-file.sh.in  test-filecache.sh.in  test-fns.sh  test-fns.sh.in  test-frame.sh.in  test-get-sourceline.sh.in  test-journal.sh.in  test-lib-eval.sh.in  test-lib-maxline.sh.in  test-lib-shell.sh.in  test-msg.sh.in  test-pre.sh.in  test-run.sh.in  test-save-restore.sh.in  test-setshow.sh.in  test-sort.sh.in  test-tty.sh.in  test-validate.sh.in
test/zsh/: .gitignore  Makefile.am  README  ok4zshdb.sh  ok4zshdb1.sh  ok4zshdb2.sh  ok4zshdb3.sh  trap-bug1.sh
(+31 files in other folders)
