SUBDIRS           = info_sub show_sub
pkgdatadir        = ${datadir}/@PACKAGE@/command
pkgdata_DATA =       \
	action.sh    \
	alias.sh     \
	break.sh     \
	condition.sh \
	continue.sh  \
	delete.sh    \
	disable.sh   \
	down.sh      \
	edit.sh      \
	enable.sh    \
	eval.sh      \
	examine.sh   \
	frame.sh     \
	help.sh      \
	info.sh      \
	list.sh      \
	quit.sh      \
	return.sh    \
	run.sh       \
	set.sh       \
	show.sh      \
	source.sh    \
	stepping.sh  \
	up.sh        \
	tracefn.sh   \
	where.sh

EXTRA_DIST = $(pkgdata_DATA)
