SUBDIRS           = info_sub set_sub show_sub
pkgdatadir        = ${datadir}/@PACKAGE@/command
pkgdata_DATA =        \
	action.sh     \
	alias.sh      \
	backtrace.sh  \
	break.sh      \
	condition.sh  \
	continue.sh   \
	delete.sh     \
	disable.sh    \
	display.sh    \
	down.sh       \
	edit.sh       \
	enable.sh     \
	eval.sh       \
	examine.sh    \
	export.sh     \
	frame.sh      \
	handle.sh     \
	help.sh       \
	info.sh       \
	kill.sh       \
	list.sh       \
	next.sh       \
	quit.sh       \
	return.sh     \
	run.sh        \
	set.sh        \
	shell.sh      \
	show.sh       \
	source.sh     \
	stepping.sh   \
	undisplay.sh  \
	up.sh         \
	trace.sh

EXTRA_DIST = $(pkgdata_DATA)

MOSTLYCLEANFILES = *.orig *.rej
