pkgdatadir        = ${datadir}/@PACKAGE@/lib
pkgdata_DATA =      	\
	alias.sh    	\
	break.sh    	\
	columns.sh  	\
	file.sh  	\
	filecache.sh  	\
	fns.sh  	\
	frame.sh        \
	gdb.sh  	\
	help.sh    	\
	hook.sh		\
	info.sh		\
	journal.sh  	\
	msg.sh  	\
	processor.sh  	\
	run.sh    	\
	save-restore.sh	\
	set-d-vars.sh   \
	sort.sh

EXTRA_DIST = $(pkgdata_DATA)
