check_DATA = \
	brkpt1.cmd         \
	brkpt1.right       \
	bug-args.cmd       \
	bug-args.right     \
	bug-errexit.cmd    \
	bug-errexit.right  \
	bug-ksharrays.cmd  \
	bug-ksharrays.right\
	bugIFS.cmd         \
	bugIFS.right       \
	delete.cmd         \
	delete.right       \
	enable.cmd         \
	enable.right       \
	examine.right      \
	examine.cmd        \
	frame.cmd          \
	frame.right        \
	list.cmd           \
	list.right         \
	lopts.right        \
	next.cmd           \
	next.right         \
	restart2.cmd       \
	restart.cmd        \
	restart.right      \
	setshow.cmd        \
	setshow.right      \
	skip.cmd           \
	skip.right         \
	sopts.right        \
	step.cmd           \
	step.right         \
	subshell.cmd       \
	subshell.right     \
	tbreak.cmd         \
	tbreak.right       \
	quit.cmd

EXTRA_DIST = $(check_DATA)
