check_DATA = \
	action.cmd         \
	action.right       \
	brkpt1.right       \
	brkpt1.cmd         \
	brkpt1.right       \
	bug-args.cmd       \
	bug-args.right     \
	bug-delete.cmd     \
	bug-delete.right   \
	bug-errexit.cmd    \
	bug-errexit.right  \
	bug-ksharrays.cmd  \
	bug-ksharrays.right\
	bugIFS2.cmd        \
	bugIFS2.right      \
	bugIFS.cmd         \
	bugIFS.right       \
	condition.cmd      \
	condition.right    \
	debug.cmd          \
	debug2.cmd         \
	debug.right        \
	delete.cmd         \
	delete.right       \
	display.cmd        \
	display.right      \
	enable.cmd         \
	enable.right       \
	examine.right      \
	examine-5.4.1.right \
	examine.cmd        \
	export-5.4.1.right \
	export.right       \
	export.cmd         \
	frame.cmd          \
	frame.right        \
	list.cmd           \
	list.right         \
	multi1.cmd         \
	multi1.right       \
	multi2.cmd         \
	multi2.right       \
	multi3.cmd         \
	multi3.right       \
	lopts.right        \
	next.cmd           \
	next.right         \
	restart2.cmd       \
	restart.cmd        \
	restart.right      \
	setshow.cmd        \
	setshow-5.4.1.right \
	setshow.right      \
	skip.cmd           \
	skip.right         \
	sopts.right        \
	step.cmd           \
	step.right         \
	subshell.cmd       \
	subshell-5.4.1.right \
	subshell.right     \
	tbreak.cmd         \
	tbreak.right       \
	quit.cmd

EXTRA_DIST = $(check_DATA)

MOSTLYCLEANFILES = *.orig *.rej
