check_DATA = \
	bug-args.sh      \
	bug-errexit.sh   \
	bug-ksharrays.sh \
	bugIFS.sh        \
	dbg-test1.sh     \
	dbg-test1.sub    \
	dbg-test2.sh     \
	bugIFS.sh        \
	exam.sh          \
	hanoi.sh         \
	nexting.sh       \
	restart.sh       \
	stepping.sh      \
	subshell.sh

SOURCES=hanoi.sh.in restart.sh.in

EXTRA_DIST = $(check_DATA) $(SOURCES)
