check_DATA = \
	bug-args.sh      \
	bug-delete.sh    \
	bug-errexit.sh   \
	bug-ksharrays.sh \
	bugIFS.sh        \
	debug.sh         \
	dbg-test1.sh     \
	dbg-test1.sub    \
	dbg-test2.sh     \
	bugIFS.sh        \
	bugIFS2.sh       \
	exam.sh          \
	hanoi.sh         \
	multi.sh         \
	nexting.sh       \
	restart.sh       \
	skip.sh          \
	stepping.sh      \
	subshell.sh

SOURCES=hanoi.sh.in restart.sh.in skip.sh.in

EXTRA_DIST = $(check_DATA) $(SOURCES)
